src/css/_header.css
.header {
  position: relative;

  &__container {
    display: flex;
    justify-content: space-between;
    max-width: var(--content-max-width);
    margin: 0 auto;
    padding-inline: max(1rem, 48px);
  }

  &__dropdown-menu{   
    backdrop-filter: blur(0px);     
    position: absolute;
    z-index:20;
    background: white;
    margin: 0;    
    top: 100%;
    left: 0;
    right: 0;
    max-width: 100%;    
    /*max-height:0;*/
    display:grid;
    grid-template-columns:1fr;
    grid-template-rows: 0fr;
    transition:grid-template-rows 0.25s linear;  
    
    h3{
      font-size:2rem;
      font-weight:lighter;
    }

    &-wrapper{   
      overflow:hidden; 
      
      .inner{
        opacity:0;        
        display:flex;
        flex-direction: column;
        gap: 20px;
        max-width:var(--content-max-width);
        width:100%;
        margin:auto;
        padding:64px 48px;
        transition:opacity 0.2s linear;   
      }
    }

    &:hover{
      transition:grid-template-rows 0.4s linear;
      grid-template-rows: 1fr;

      ~ .blur-veil{
        height:100vh;
        transition:opacity 0.2s linear, height 0s;
        opacity:1;
      }
    
      .header__dropdown-menu-wrapper .inner{
        transition:opacity 0.6s linear;
        opacity:1;
      }
    }

    ul{ 
      margin:0;

      li{ margin: 0 }
    }
  }

  &__logo {
    img {
      width: 200px;

      @media (--tablet) {
        width: 250px;
      }
    }
  }

  &__nav {
    display: flex;
    align-items: center;
    width:100%;
  }

  &__nav-list {
    display: none;
    width:100%;
    align-items: center;

    .blur-veil{
      opacity:0;
      transition:opacity 0.4s linear, height 0s linear 2s;
      pointer-events: none;
      position: absolute;
      z-index: 0;
      content: "";
      top: 100%;
      left: 0;
      right: 0;
      backdrop-filter: blur(10px);
      height:0;
    }

    @media (--desktop){
      position: static;
      display: flex;
      padding: 0;

      li {
        margin-bottom: 0;
        margin-left: 0;
      }

      a {
        font-size: 1.25rem;
        letter-spacing: 0.5px;
        font-weight: lighter;
      }
    }
  }

  &__nav-list-item {
    position:relative;
    display: flex;
    align-items:center;
    
    .underline{
      position: absolute;
      height: 2px;
      background: var(--color-text);
      left: 0;
      right: 100%;
      margin: 32px;
      bottom: -10px;
      transition:right 0.5s;
    }

    i{
      margin-left:5px;
      font-size:smaller;
    }

    a{
      padding: var(--base-padding) 32px;
      
      @media (--desktop){
        padding:32px;
      }
    }    

    &:hover{
      .underline{
        right:0%;
      }
    }

    &:has(+ .header__dropdown-menu:hover){
      .underline{
        right:0%;
      }
    }

    &:hover + .header__dropdown-menu{
      transition:grid-template-rows 0.4s linear;
      grid-template-rows:1fr;
      z-index:20;

      ~ .blur-veil{        
        transition:opacity 0.2s linear, height 0s;
        opacity:1;
        height:100vh;
      }
    }

    &:hover + .header__dropdown-menu .header__dropdown-menu-wrapper .inner{
      transition:opacity 0.6s linear;
      opacity:1;
    }

    &-logo{
      padding: 0!important;
      margin-right:auto;

      a{ padding:0!important; }
    }
  }

  &__nav-list-mobile {
    position: fixed;
    z-index: 99;
    top: 0;
    right: 0;
    left: 0;
    height:100vh;
    max-height:0;
    background-color: white;    
    font-family: var(--font-primary);
    display:flex;
    flex-direction: column;
    justify-content: center;
    gap: .5rem;    
    overflow:hidden;
    
    ul{
      display:flex;
      flex-direction:column;
      gap:10px;
      font-size: 2rem;
      font-weight: lighter;
      padding: 2rem;
    }

    li{
      display:none;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;

      /* Submenu */
      ul{
        gap:0;
        margin-top:1rem;
        padding:0;
        color:var(--color-text-light);
        font-size:1.5rem;
      }
    }    

    &-show{
      transition: max-height 0.4s linear;
      max-height:100vh;

      li{
        display:list-item;
      }
    }

    @media (--desktop) {
      display: none !important;
    }
  }

  &__hamburger {
    z-index:101;
    margin-left:auto;
    padding: var(--base-padding) 32px;
    display: block;
    border: none;
    background: none;

    &-open{
      position: fixed;
      top: 0;
      right: 0;
    }

    @media (--desktop) {
      display: none;
    }
  }
}

